--- a/contact-me.html
+++ b/contact-me.html
@@ -11,9 +11,11 @@
       <li><b>Email id:</b> shubhankar.debnath.SD@gmail.com</li>
       <li><b>Address:</b> Noida, UP, India.</li>
     </ul>
-    <form >
+    <form action="mailto:shubhankar.debnath.SD@gmail.com">
       <label>Your name: </label>
-      <input type=text>
+      <input type=text name="Name">
+      <label>Your email: </label>
+      <input type=email name="Email">
       <input type=submit>
     </form>
     
