--- a/contact-me.html
+++ b/contact-me.html
@@ -11,9 +11,10 @@
       <li><b>Email id:</b> shubhankar.debnath.SD@gmail.com</li>
       <li><b>Address:</b> Noida, UP, India.</li>
     </ul>
+    <hr size="2">
     <form action="mailto:shubhankar.debnath.SD@gmail.com">
       <label>Your name: </label>
-      <input type=text name="Name">
+      <input type=text name="Name"><br>
       <label>Your email: </label>
       <input type=email name="Email">
       <input type=submit>
