--- a/contact-me.html
+++ b/contact-me.html
@@ -16,7 +16,7 @@
       <label>Your name: </label>
       <input type=text name="Name"><br>
       <label>Your email: </label>
-      <input type=email name="Email">
+      <input type=email name="Email"><br>
       <input type=submit>
     </form>
     
